Fix scrollTo Make nav font heavy Fix nav z-index Fix visibility of certain titles Change flow of model-viewer

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -35,6 +35,13 @@ section p {
   text-align: center;
 }
 
+.alt-title {
+  background-color: var(--title-color);
+  color: var(--black);
+  opacity: 0.8;
+  padding: 0 3em;
+}
+
 .hero__content p {
   background-color: var(--title-color);
   color: var(--secondary-color);
@@ -67,4 +74,8 @@ section p {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.fdr {
+  flex-direction: row;
 }
